--- a/event-delegation/index.html
+++ b/event-delegation/index.html
@@ -11,6 +11,9 @@
       <li id="hijo-4">Item 4</li>
       <li id="hijo-5">Item 5</li>
       <li id="hijo-6">Item 6</li>
+      <li id="hijo-7">Item 7</li>
+      <li id="hijo-8">Item 8</li>
+      <li id="hijo-9">Item 9</li>
     </ul>
     <script src="script.js"></script>
   </body>
